# postman

./: .gitignore  .pre-commit-config.yaml  README.md  config.json  main.py  pyproject.toml  test.sh
postman/: connector.py  mail.py  manager.py
tests/: conftest.py
tests/integration/: test_connector.py
tests/unit/: test_connector_abstract.py  test_mail.py  test_manager.py
