[tool.poetry]
name = "postman"
version = "0.1.0"
description = ""
authors = ["JaviMunir <moubayyed47@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
requests = "^2.32.3"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pyinstaller = "^6.10.0"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
